--- a/css/styles.css
+++ b/css/styles.css
@@ -21,12 +21,13 @@
   text-align: center;
 }
 
-#skills{
+#skills {
   height: 100px;
 }
 
-#description{
-    height: 100px;
+#description, #app-exp {
+    padding-bottom: 100px;
+    padding-top: 20px;
 }
 
 #posting-btn, #apply {
