--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,14 @@
   background: linear-gradient(90deg, rgba(140,219,2,1) 0%, rgba(9,121,117,1) 35%, rgba(0,196,255,1) 100%);
 }
 
+.label {
+  font-weight: bold;
+}
+
+.alert-heading {
+  text-transform: uppercase;
+}
+
 #home-heading {
   text-align: center;
 }
